shit load of debugging
